fix: Overflowing UI on small height screens

--- a/src/components/VideoItem/VideoItem.module.scss
+++ b/src/components/VideoItem/VideoItem.module.scss
@@ -12,7 +12,7 @@
   display: grid;
   grid-template-rows: [canvas-top main-top] 1fr [main-bottom scrubber-top] max-content [scrubber-bottom canvas-bottom];
   grid-template-columns: [canvas-start main-start] 1fr [main-end controls-start] (
-      $ui-button-size + $ui-spacer
+      max-content
     ) [controls-end canvas-end];
 
   video {
@@ -68,6 +68,7 @@
   display: flex;
   flex-direction: column;
   justify-content: end;
+  align-items: end;
   margin-right: $ui-spacer;
   margin-bottom: $ui-spacer;
 
@@ -81,6 +82,7 @@
     justify-content: center;
     align-items: center;
     height: $ui-button-size;
+    width: $ui-button-size;
 
     background-color: transparent;
     color: white;
@@ -148,9 +150,13 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap-reverse;
   justify-content: center;
-  width: 100%;
   transition: opacity ease-in-out;
+
+  @media (max-height: 400px) {
+    max-height: 200px;
+  }
 }
 
 .toggleable-ui-button {
